style.css
/* ... */
#dev-tag:hover{
    padding: 2px 8px;
    background: rgba(var(--c3-rgb), .7);
    border: solid 2px rgba(var(--c3-rgb), 0);
}
#dev-type{
    /* color: rgb(0, 255, 200); */
    color: var(--c3);
    font-size: .8em;
    margin: 0px;
    padding: 5px;
    /* writing-mode: vertical-rl; */
    /* transform:rotate(180deg); */
}
#dev-tag:hover #dev-type{
    color: var(--fg);
}
#hero-content{
    display: inline-block;
    margin: auto 10vw;
    margin-right: 0px;
    width: max-content;
    max-width: 85vw;
    animation: hero-credentials 2s ease-in-out, fade-in 1s ease-out;
}
#greeting, #name, #aka{
    color: white;
    margin: 0px;
    margin-left: 0px;
}
#greeting{
    font-size: 2em;
}
#name{
    font-size: 4em;
}
#aka{
    font-size: 1.8em; 
    color: rgba(255, 255, 255, 0.85);
}
#aka span{
    color: var(--c4);
}
#scroll-down{
    position: absolute;
    bottom: 35px;
    left: 50%;
    transform: translateX(-50%);
    font-size: 1.9em;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    border: none;
    display: grid;
    background: rgb(0, 255, 195);
    color: rgb(0, 0, 0);
    cursor: pointer;
    text-decoration: none;
    animation: scrollBtn 1.75s ease-in infinite 4s, scrollBtn-fade-in 4s ease-out;
}

.section-title-div-wrapper{
    display: grid;
    width: 100%;
    text-align: center;
    user-select: none   ;
}
.section-title-div{
    display: inline-grid;
    grid-template-columns: 1fr max-content 1fr;
    grid-gap: 25px;
    text-align: center;
    width: 80%;
    margin: 0 auto;
}
.section-title-line{
    height: 1px;
    width: 100%;
    margin: auto;
    animation: widen 1s;
    background: linear-gradient(90deg, var(--c1), rgba(0, 0, 0, 0));
}
.section-title-line:nth-child(1){
    background: linear-gradient(-90deg, var(--c1), rgba(0, 0, 0, 0));
}
.section-title{
    font-size: 2.2em;
    margin: 0px;
    background: linear-gradient(115deg, rgba(var(--c1-rgb), .6), var(--c1) 80%, rgba(var(--c1-rgb), .6));
    background-clip: text;
    color: transparent;
    animation: fade-in 1s;
    text-align: center;
}

#about{
    margin-bottom: 20px;
    padding: 20px 0px;
    min-height: calc(100vh - 40px);
}
#about-content{
    margin: auto;
}
#about-grid{
    display: grid;
    grid-template-columns: 1fr 1.2fr;
    margin: 0 auto;
    margin-top: 7vh;
    gap: 15px;
    width: 80%;
}
#about-desc{
    margin: 0 auto;
    background: linear-gradient(135deg, var(--c2), rgba(var(--c2-rgb), .5) 70%);
    width: calc(100% - 60px);
    padding: 30px 30px;
    border-radius: 20px;
    line-height: 23px;
    font-size: 1.05em;
}
.about-para span{
    font-weight: 600;
    color: var(--c4);
}
#about-desc-sm-links{
    display: grid;
    grid-template-columns: repeat(3, max-content);
    width: fit-content;
    gap: 20px;
    filter: invert(1);
}
.about-desc-sm-a:hover .about-desc-sm-icon{
    filter: invert(.3);
}
.about-desc-sm-icon{
    width: 25px;
    transition: .3s;
}
#skill-cards{
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
}
.skill-card{
    width: 75%;
    height: 80%;
    margin: auto;
    background: linear-gradient(-45deg, var(--c2), rgba(var(--c2-rgb),.5) 80%);
    padding: 0px 20px;
    padding-right: 0px;
    border-radius: 15px;
    display: grid;
}
.skill-card-inner{
    margin: auto 0;
}
.skill-card-title{
    margin: 0px;
    font-size: 1.6em;
    margin-bottom: 10px;
}
.skill-card-list{
    margin: 0px;
    padding: 0px;
    font-size: 1em;
    display: flex;
    flex-direction: row;
    line-break: anywhere;
    gap: 10px;
    width: fit-content;
    margin-left: 15px;
}
.skill-card-list p{
    margin: auto;
    background: rgba(var(--c1-rgb), .2);
    padding: 3px 10px;
    border-radius: 200px;
    user-select: none;
    -ms-user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
}

#projects{
    min-height: 100vh;
    padding-top: 40px;
}
#projects-content{
    margin: auto 0;
}
#project-cards{
    display: grid;
    width: 85%;
    margin: auto;
    grid-template-columns: repeat(2, 1fr);
    gap: 25px;
    margin: auto;
    margin-top: 10vh;
    row-gap: 50px;
}
.project-card{
    display: grid;
    grid-template-rows: max-content 1fr;
    margin: auto;
    width: 95%;
    min-height: 350px;
    max-height: 100%;
}
.project-img-div{
    display: grid;
    width: calc(100% - 2px);
    height: 180px;
    overflow: hidden;
    border-radius: 15px;
    border-bottom-left-radius: 0px;
    border-bottom-right-radius: 0px;
    border: solid 1px rgba(var(--c2-rgb), .3);
    text-align: center;
}
.project-img-div img{
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    user-select: none;
    -ms-user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
}

.project-card-detail-div{
    background: linear-gradient(-45deg, var(--c2), rgba(var(--c2-rgb),.5) 80%);
    height: calc(100% - 30px);
    border-radius: 15px;
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
    padding: 15px 20px;
    display: grid;
    grid-template-rows: max-content 1fr max-content;
}
.project-title-div{
    display: grid;
    grid-template-columns: repeat(3, max-content);
    gap: 15px;
}
.project-title{
    margin: auto;
    padding: 0px;
    font-size: 1.4em;
}
.project-github-a, .project-live-a{
    margin: auto;
}
.project-github, .project-live{
    filter: invert(1);
    width: 1.3em;
    margin: auto;
    transition: .5s;
    display: block;
}
.project-live{
    width: 1.1em;
}
.project-github-a:hover .project-github{
    transform: scale(.9);
    filter: invert(.7);
}
.project-desc{
    margin: 10px 0px;
    margin-bottom: 15px;
}
.project-technologies-list{
    width: fit-content;
    display: flex;
    flex-flow: row;
    column-gap: 10px;
}
/* ... */

